tdf#125576: Empty recent characters in special characters dialog...

... for bullet customization

Change-Id: Ica66dcc0d3f379886788d426941b98d170444799
Reviewed-on: https://gerrit.libreoffice.org/73306
Tested-by: Jenkins
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>